--- a/RMI_Server/nbproject/project.properties
+++ b/RMI_Server/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=rmi.RMI_Server
+main.class=rmi.RMIServer
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
